CDPD-58365: [frontend] prevent AiAssistbar's toolbar buttons from shifting place when the input is expanded
(cherry picked from commit 3df91dd520eee8e88189947d34c955c724e60f46)
(cherry picked from commit f65956dfb04a1396f8dbaaa230f1bb275057e623)

--- a/desktop/core/src/desktop/js/apps/editor/components/AiAssist/AiAssistToolbar/AiAssistToolbarInput.scss
+++ b/desktop/core/src/desktop/js/apps/editor/components/AiAssist/AiAssistToolbar/AiAssistToolbarInput.scss
@@ -15,7 +15,6 @@ $input-animation-time: 0.5s;
   .hue-ai-assist-toolbar-input__wrapper--expanded {
     animation: expandInput $input-animation-time ease forwards;
     flex-grow: 1;
-    order: -1;
   }
 
   .hue-ai-assist-toolbar-input__text-input {
